<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">ECG Monitor</string>
    <string name="action_settings">Settings</string>
    
    <!--  MainActivity -->
    <string name="text_default_heartrate">120</string>
    <string name="text_bpm">bpm</string>
    <string name="text_bluetooth">Bluetooth:\ </string>
    <string name="text_electrode_RA">RA:\ </string>
    <string name="text_electrode_LA">LA:\ </string>
    <string name="text_lead_connected">OK</string>
    <string name="text_lead_disconnected">falha</string>
    <string name="text_connected">desconectado</string>
    <string name="text_disconnected">desconectado</string>
    <string name="text_disconnecteds">desconectados</string>
    <string name="text_electrodes">Eletrodos</string>
    <string name="text_electrode">Eletrodo</string>
    <string name="text_and">e</string>
    
    <!--  BluetoothChat -->
    <string name="not_connected">Você não está conectado com um dispositivo.</string>
    <string name="bt_not_enabled_leaving">Bluetooth não está habilitado.</string>
    <string name="title_connecting">conectando...</string>
    <string name="title_connected_to">conectado a <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">não conectado</string>
    
    <!--  DeviceListActivity -->
    <string name="scanning">procurando por dispositivos...</string>
    <string name="select_device">selecione um dispositivo para conectar</string>
    <string name="none_paired">Nenhum dispositivo pareado</string>
    <string name="none_found">Nenhum dispositivo encontrado</string>
    <string name="title_paired_devices">Dispositivos Pareados</string>
    <string name="title_other_devices">Outros Dispositivos Disponíveis</string>
    <string name="button_scan">Procurar por dispositivos</string>

    <!-- Options Menu -->
    <string name="secure_connect">Conectar - Seguro</string>
    <string name="insecure_connect">Conectar - Inseguro</string>
    <string name="discoverable">Tornar visível</string>
    <string name="test_mode">Modo de teste</string>

</resources>
