<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ecgmonitor.MainActivity" >

    <com.example.chartview.ChartView
        android:id="@+id/chartView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearLayout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/textView1"
        android:layout_toStartOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/chartView1"
        android:layout_margin="10dp"
        android:text="@string/text_default_heartrate"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignEnd="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/text_bpm" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:baselineAligned="false"
        android:layout_marginTop="5dp" >
        
        <LinearLayout
	        android:id="@+id/LinearLayout11"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2" >

	        <TextView
	            android:id="@+id/textView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="start"
	            android:text="@string/text_bluetooth" />
	
	        <TextView
	            android:id="@+id/tv_bluetooth_state"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="start"
	            android:text="@string/text_disconnected" />
        </LinearLayout>

        <LinearLayout
	        android:id="@+id/LinearLayout12"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" >

	        <TextView
	            android:id="@+id/textView4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="start"
	            android:text="@string/text_electrode_RA" />
	
	        <TextView
	            android:id="@+id/tv_RA_state"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="start"
	            android:text="@string/text_lead_disconnected" />
        </LinearLayout>

        <LinearLayout
	        android:id="@+id/LinearLayout13"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" >

	        <TextView
	            android:id="@+id/textView5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="start"
	            android:text="@string/text_electrode_LA" />
	
	        <TextView
	            android:id="@+id/tv_LA_state"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="start"
	            android:text="@string/text_lead_disconnected" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
